# dry-cruds

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
common/: buttons.py  fields.py  filters.py  viewset.py  widgets.py
dry_cruds/: asgi.py  settings.py  urls.py  wsgi.py
hr/: forms.py  models.py  urls.py  views.py
hr/management/commands/: populate.py
hr/migrations/: 0001_initial.py
hr/templates/hr/: home.html
hr/tests/: conftest.py  factories.py  test_views.py
templates/common/: base.html
templates/common/viewsets/: confirm_delete.html  detail.html  form.html  list.html
templates/common/widgets/: date_range.html  range.html
